# Zenith

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
architecture/: 0001-record-architecture-decisions.md  0002-two-applications-over-shared-infrastructure.md  0003-event-system-lives-in-shared.md  0004-sqlite-for-em-persistence.md  0005-session-oriented-provider-abstraction.md  0006-task-lifecycle-and-human-approval-gates.md  0007-synchronous-core-no-async.md  0008-execution-engine-reconcile-and-advance.md  0009-plans-and-the-evolving-task-graph.md  0010-deterministic-context-assembly.md  0011-turn-oriented-assistant-provider-contract.md  0012-assistant-pipeline-one-path-from-request-to-reply.md  0013-tools-act-skills-instruct.md  0014-claude-code-cli-as-first-em-provider.md  0015-stdlib-claude-messages-client-as-first-assistant-provider.md  0016-filesystem-shell-git-diff-test-runner-tool-suite.md  0017-plugin-discovery-and-loading-from-disk.md  0018-sqlite-backed-durable-conversations.md  0019-verification-gate-before-needs-review.md  0020-ai-performed-planning.md  0021-the-workflow-as-a-first-class-lifecycle.md  0022-a-session-must-be-able-to-act.md  0023-recording-what-a-session-changed.md  0024-desktop-control-the-first-os-acting-tools.md  0025-main-as-composition-root-with-confirmed-destructive-tools.md  0026-app-control-list-switch-close.md  0027-memory-automatic-recall-recency-importance-relevance.md  0028-memory-consolidation-and-pruning.md  0029-reflection-as-a-derived-layer-above-memory.md  0030-file-search-across-roots-read-only.md  README.md
(+324 files in other folders)
