[project]
name = "zenith"
version = "0.1.0"
description = "Zenith runtime — the platform on which the Zeni assistant runs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "padamsarda" }]

[project.urls]
Homepage = "https://github.com/padamsarda/zenith"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = [
    "runtime",
    "runtime.events",
    "runtime.commands",
    "runtime.plugins",
    "shared",
    "shared.events",
    "shared.utils",
    "configs",
    "engineering_tools",
    "engineering_tools.watchdog",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
